--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "require": {
             "npm-asset/uglify-js": "*",
             "npm-asset/uglifycss": "*",
-            "skeeks/yii2-assets-auto-compress": "*"
+            "skeeks/yii2-assets-auto-compress": "*",
+            "verbi/yii2-helpers": "*"
         },
         "scripts": {
             "post-package-install": [
